# mosaic

./: .dockerignore  .env.example  .gitignore  CONFIG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  README.md  README.template.md  SECURITY.md  TECHNICAL_SPEC.md  TODO.md  ci-local.sh  config.json  deny.toml  docker-compose.yml  package-lock.json  package.json
.github/: prompt.md
.github/actions/check-previous-run/: action.yml
.github/actions/set-result/: action.yml
.github/actions/setup-env/: action.yml
.github/actions/setup-node/: action.yml
.github/actions/setup-starsd/: action.yml
.github/templates/: status-template.md
.github/workflow-scripts/: package-lock.json  package.json  update-readme.go
.github/workflow-scripts/src/: cache.js  execution-plan.js  gather-plan-results.js  get-status.js  notify.js  send-discord-message.js  status.js  update-balances.js  update-readme.js  update-status.js  workflow-config.js
.github/workflows/: basic-ci.yml  coloring-contract.yml  contract-clippy.yml  contract-compile.yml  contract-deploy.yml  contract-format.yml  contract-test.yml  contracts.yml  deploy.yml  deployment.yml  discord-notifications.yml  e2e-tests.yml  e2e.yml  execution-plan.yml  frontend-build.yml  frontend-lint.yml  frontend-test.yml  frontend.yml  gather-results.yml  mosaic.yml  nft-contract.yml  notify-discord.yml  pixel-canvas.yml  reusable-changes.yml  reusable-contracts.yml  reusable-deploy.yml  reusable-e2e.yml  reusable-execution-plan.yml  reusable-frontend.yml  reusable-notify.yml  reusable-rust-setup.yml  reusable-status.yml  setup-node.yml  setup-rust.yml  setup-starsd.yml  test.yml  update-balances.yml  update-readme.yml  update-status.yml
.github/workflows/components/: changes.yml  contracts.yml  e2e.yml
.history/: .gitignore_20241208195516  README_20241208195516.md  TODO_20241208200030.md  TODO_20241208200222.md
.history/frontend/: .env_20241208195859.local  package_20241208195706.json
.validate-cache/: contract-hash  frontend-hash
contracts/: Cargo.toml
contracts/e2e/: Cargo.toml
contracts/e2e/src/: chain.rs  contract.rs  error.rs  lib.rs
contracts/mosaic-tile-nft/: Cargo.toml
contracts/mosaic-tile-nft/examples/: schema.rs
contracts/mosaic-tile-nft/schema/: mosaic-tile-nft.json  position.json
contracts/mosaic-tile-nft/schema/raw/: response_to_tile_state.json
contracts/mosaic-tile-nft/src/: contract.rs  error.rs  execute.rs  helpers.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/mosaic-tile-nft/src/testing/: constants.rs  mock_querier.rs  mod.rs  setup.rs  tests.rs
contracts/mosaic-vending-minter/: Cargo.toml
contracts/mosaic-vending-minter/src/: contract.rs  error.rs  lib.rs  msg.rs
contracts/mosaic_tile_nft/: Cargo.toml
contracts/mosaic_tile_nft/contracts/mosaic_tile_nft/contracts/mosaic_tile_nft/schema/: color.json
contracts/mosaic_tile_nft/e2e/: tests.rs
contracts/mosaic_tile_nft/schema/: mosaic-tile-nft.json  query_msg.json  tile_metadata.json
contracts/mosaic_tile_nft/schema/raw/: response_to_batch_tile_pixels.json  response_to_cw721.json  response_to_mosaic_state.json  response_to_pixels_state.json  response_to_tiles_state.json
contracts/mosaic_tile_nft/src/: contract.rs  execute.rs  query.rs  state.rs
contracts/mosaic_tile_nft/src/testing/: tests.rs
contracts/mosaic_tile_nft/tests/: integration.rs
contracts/mosaic_vending_minter/: Cargo.toml  README.md
contracts/mosaic_vending_minter/src/: contract.rs  error.rs  integration_tests.rs  lib.rs  msg.rs  state.rs
contracts/pixel-canvas/: Cargo.toml
contracts/pixel-canvas/src/: error.rs  lib.rs  msg.rs  state.rs
contracts/pixel-canvas/tests/: integration-tests.js  test_pixel_canvas.rs
contracts/pixel-nft/: Cargo.toml
contracts/pixel-nft/.cargo/: config.toml
contracts/pixel-nft/contracts/collections/sg721-pixel/: Cargo.toml
contracts/pixel-nft/contracts/collections/sg721-pixel/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  upgrades.rs
contracts/pixel-nft/contracts/coloring/: Cargo.toml
contracts/pixel-nft/contracts/coloring/src/: error.rs  lib.rs  msg.rs  state.rs
contracts/pixel-nft/contracts/sg721-pixel/: Cargo.toml
contracts/pixel-nft/contracts/sg721-pixel/src/: lib.rs  metadata.rs  msg.rs  state.rs
contracts/pixel-nft/e2e/src/helpers/: helper.rs
contracts/pixel-nft/src/: error.rs  lib.rs  metadata.rs  msg.rs  state.rs
contracts/pixel-nft/src/testing/: integration_test.rs  mod.rs  prop_test.rs
contracts/tile-coloring/: Cargo.toml
contracts/tile-coloring/src/: contract.rs  error.rs  integration_tests.rs  lib.rs  msg.rs  state.rs
contracts/tile-coloring/src/testing/: constants.rs  mock_querier.rs  mod.rs  setup.rs  tests.rs
e2e/: Cargo.toml
e2e/src/: lib.rs
e2e/src copy/: chain.rs  contract.rs  error.rs
e2e/src/tests/: mod.rs  test_utils.rs
e2e/src/tests/scenarios/: pixel_lifecycle.rs
frontend/: .env.example  .eslintrc.json  Dockerfile  jest.config.js  jest.setup.js  jest.setup.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/e2e/: pixel-canvas.spec.ts
frontend/src/: setupTests.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: ColorPicker.tsx  KeplrConnection.tsx  PixelCanvas.tsx  WalletConnect.tsx
frontend/src/config/: chain.ts
frontend/src/hooks/: useCanvasWebSocket.ts  useContract.ts
frontend/src/types/: index.ts  jsx.d.ts  test-utils.d.ts  window.d.ts
mosaic-contract/: Cargo.toml
mosaic-contract/schema/: execute_msg.json
mosaic-contract/src/: constants.rs  contract.rs  error.rs  lib.rs  msg.rs  types.rs
mosaic-contract/tests/: test_utils.rs
mosaic-ipfs/: Cargo.toml
mosaic-ipfs/src/: config.rs  ipfs.rs  lib.rs  listener.rs  main.rs
mosaic-ipfs/src/client/: mod.rs
mosaic-ipfs/src/service/: mod.rs
mosaic-ipfs/src/tests/: mod.rs
scripts/: instantiate.sh  update-balances.js  validate.sh
scripts/discord-bot/: .env.example  README.md  deploy-commands.js  index.js
src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
src/tests/: mod.rs
(+32 files in other folders)
