[workspace]
members = [
    "mosaic-tile-nft",
    "mosaic-vending-minter"
]

[workspace.package]
version = "0.1.0"
authors = ["Mosaic Team"]
edition = "2021"
rust-version = "1.70.0"

[workspace.dependencies]
cosmwasm-schema = "1.4.0"
cosmwasm-std = "1.4.0"
cosmwasm-storage = "1.4.0"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
schemars = "0.8.15"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.48"

# Dev dependencies shared across all contracts
[workspace.dev-dependencies]
cw-multi-test = "0.16.5"
anyhow = "1.0.75" 