[package]
name = "mosaic-ipfs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
anyhow = "1.0"
thiserror.workspace = true
async-trait = "0.1"
tracing = "0.1"
futures = "0.3"

[dev-dependencies]
tempfile = "3.2"
tokio-test = "0.4"
wiremock = "0.5" 