[package]
name = "mosaic-tile-nft"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "Mosaic Tile NFT contract with updatable metadata for the Stargaze blockchain"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
thiserror       = { workspace = true }
cw721-base      = { workspace = true, features = ["library"] }
sg1             = { workspace = true }
sg721           = { workspace = true }
sg721-base      = { workspace = true, features = ["library"] }
sg-std          = { workspace = true }
semver          = { workspace = true }

[dev-dependencies]
cosmwasm-schema = { workspace = true }
cw-multi-test   = { workspace = true }
cw721           = { workspace = true }
