[package]
name        = "mosaic-vending-minter"
version     = "0.1.0"
authors     = ["Malik Fassifihri <malik@example.com>"]
edition     = "2021"
description = "Vending minter contract for Mosaic Tile NFTs with support for random and position-based minting"
license     = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = "1.4.0"
cosmwasm-std    = "1.4.0"
cw2             = "1.1.1"
cw721           = "0.18.0"
cw721-base      = { version = "0.18.0", features = ["library"] }
cw-storage-plus = "1.1.0"
cw-utils        = "1.0.1"
schemars        = "0.8.15"
serde           = { version = "1.0.188", default-features = false, features = ["derive"] }
sg1            = "0.22.0"
sg2            = "0.22.0"
sg721          = "0.22.0"
sg721-base     = "0.22.0"
thiserror      = "1.0.48"
mosaic-tile-nft = { path = "../mosaic-tile-nft", version = "0.1.0" }
rand = { version = "0.8", default-features = false }
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
cw-multi-test = "0.16.5" 