[package]
name = "mosaic_tile_nft"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cosmwasm-storage.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
cw721.workspace = true
cw721-base.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
sg721.workspace = true
sg721-base.workspace = true
sg-std.workspace = true
cw-utils.workspace = true
tokio.workspace = true
[dev-dependencies]
cw-multi-test.workspace = true
tokio = { version = "1.0", features = ["full"] }

[[test]]
name = "e2e"
path = "e2e/tests.rs"
test = true
