[workspace]
members = ["."]
resolver = "2"

[package]
name = "pixel-nft"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "Pixel NFT contract for the Stargaze blockchain"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.1", features = ["stargate"] }
cosmwasm-storage = "1.1"
cosmwasm-schema = "1.1"
cw-storage-plus = "0.16"
cw2 = "0.16"
cw721 = "0.16"
cw721-base = { version = "0.16", features = ["library"] }
cw-utils = "0.16"
sg-std = "3.1"
sg721 = "3.1"
sg721-base = { version = "3.1", features = ["library"] }
schemars = "0.8.11"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror = "1.0.38"

[dev-dependencies]
cw-multi-test = "0.16"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
