[workspace]
members = [
    "contracts/sg721-pixel",
    "contracts/coloring"
]
resolver = "2"

[package]
name = "pixel-factory"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "Factory contract for Pixel NFTs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
cosmwasm-schema = "1.5.0"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
schemars = "0.8.16"
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
thiserror = "1.0.50"
sg721-base = { version = "2.3.1", features = ["library"] }
sg-metadata = "2.3.1"
sg721-pixel = { path = "./contracts/sg721-pixel", features = ["library"] }
pixel-coloring = { path = "./contracts/coloring", features = ["library"] }

[dev-dependencies]
cw-multi-test = "0.20.0"
proptest = "1.4.0"
test-case = "3.3.1"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
