[package]
name = "pixel-coloring"
version = "0.1.0"
authors = ["Cursor <team@cursor.so>"]
edition = "2021"
description = "Pixel coloring contract for the Mosaic project"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = { version = "1.3.1" }
cosmwasm-std = { version = "1.3.1" }
cw2 = "1.1.0"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.1"
schemars = "0.8.12"
serde = { version = "1.0.183", default-features = false, features = ["derive"] }
thiserror = "1.0.40"
sg721-pixel = { path = "../sg721-pixel", features = ["library"] } 