[package]
name = "pixel-coloring"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
description = "Pixel coloring contract for Stargaze NFTs"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { version = "1.5.0", features = ["staking"] }
cosmwasm-schema = "1.5.0"
cw-storage-plus = "1.2.0"
cw2 = "1.1.2"
schemars = "0.8.16"
serde = { version = "1.0.193", default-features = false, features = ["derive"] }
thiserror = "1.0.50"
sg721-base = { version = "2.3.1", features = ["library"] }
sg-metadata = "2.3.1"
serde_json = "1.0.108"

[dev-dependencies]
cw-multi-test = "0.20.0" 