[package]
name = "sg721-pixel"
version = "0.1.0"
authors = ["Cursor <team@cursor.so>"]
edition = "2021"
description = "Pixel NFT contract extending sg721-base"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-schema = { version = "1.3.1" }
cosmwasm-std = { version = "1.3.1" }
cw2 = "1.1.0"
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
cw-ownable = "0.5.1"
cw-storage-plus = "1.1.0"
cw-utils = "1.0.1"
schemars = "0.8.12"
serde = { version = "1.0.183", default-features = false, features = ["derive"] }
sg721 = { path = "../../../../packages/sg721", features = ["library"] }
sg721-base = { path = "../sg721-base", features = ["library"] }
thiserror = "1.0.40"
url = "2.4.0" 